--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,56 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Blog</title>
-    <%= csrf_meta_tags %>
+<head>
+  <title>Blog</title>
+  <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag    'application', 'https://fonts.google.com/css?family=Raleway:400,700' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
-    <%= yield %>
-  </body>
+<body>
+
+	<div id="sidebar">
+		<div id="logo">
+			<%= link_to root_path do %>
+				<%= image_tag "logo.svg" %>
+			<% end %>
+		</div>
+
+		<ul>
+			<li class="category">Website</li>
+			<li><%= link_to "Blog", root_path %></li>
+			<li>About</li>
+		</ul>
+
+		<ul>
+			<li class="category">Social</li>
+			<li><a href="https://github.com/codeTao42">Github</a></li>
+			<li><a href="https://www.facebook.com/profile.php?id=100007487178341">Facebook</a></li>
+			<li><a href="mailto:acjarrell@gmail.com">Email</a></li>
+		</ul>
+	</div>
+
+	<p class="sign_in">Admin Login</p>
+
+	<div id="main_content">
+		<div id="header">
+			<p>All Posts</p>
+
+			<div class="buttons">
+				<button class="button"><%= link_to "New Post", new_post_path %></button>
+				<button class="button">Log Out</button>
+			</div>
+
+			<% flash.each do |name, msg| %>
+				<%= content_tag(:div, msg, class: "alert") %>
+			<% end %>
+		</div>
+
+		<%= yield %>
+
+	</div>
+
+</body>
 </html>
