--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,9 +30,12 @@
 			<li><a href="https://www.facebook.com/profile.php?id=100007487178341">Facebook</a></li>
 			<li><a href="mailto:acjarrell@gmail.com">Email</a></li>
 		</ul>
+		<% if !user_signed_in? %>
+			<p class="sign_in">Admin Login</p>
+		<% end %>
 	</div>
 
-	<p class="sign_in">Admin Login</p>
+	
 
 	<div id="main_content">
 		<div id="header">
@@ -44,11 +47,12 @@
 				<%= link_to "Back to all posts", root_path %>
 			<% end %>
 
-			<div class="buttons">
-				<button class="button"><%= link_to "New Post", new_post_path %></button>
-				<button class="button">Log Out</button>
-			</div>
-
+			<% if user_signed_in? %>
+				<div class="buttons">
+					<button class="button"><%= link_to "New Post", new_post_path %></button>
+					<button class="button">Log Out</button>
+				</div>
+			<% end %>
 			<% flash.each do |name, msg| %>
 				<%= content_tag(:div, msg, class: "alert") %>
 			<% end %>
